<resources>
    <string name="app_name">WeatherApp</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Account type (for sync-adapter authenticator) -->
    <!-- SyncAdapter related -->
    <string name="sync_account_type">weatherapp.bitfrom.me</string>
    <string name="content_authority">me.bitfrom.weatherapp</string>

    <!-- Facebook app_id -->
    <string name="facebook_app_id">1535702916748100</string>
    <!-- Google api key -->
    <string name="google_map_api_key">AIzaSyB_BfWeLx7KaY12THSVW2zYPWsdSUOFqqk</string>

    <!-- Strings for navigation drawer -->
    <string name="drawer_item_today">Today\'s weather</string>
    <string name="drawer_item_week">Week\'s forecast</string>
    <string name="drawer_item_about">About</string>
    <string name="drawer_category">Opportunities</string>
    <string name="drawer_item_settings">Settings</string>
    <string name="drawer_item_logout">Logout</string>

    <!-- General strings -->
    <string name="action_dismiss_snackbar">Dismiss</string>
    <string name="share_with_title">Share with:</string>

    <!-- MainActivity strings -->
    <string name="dialog_logout_message">,\u0020you want to logout?</string>
    <string name="dialog_logout_yes">Yes</string>
    <string name="dialog_logout_no">No</string>

    <!-- LoginActivity strings -->
    <string name="activity_login_welcome">Welcome! Please, login.</string>
    <string name="activity_login_cancel_message">You have to login.</string>

    <!-- Strings for displaying errors -->
    <string name="error_something_went_wrong">Something went wrong. Try again later.</string>
    <string name="error_network_isnt_available">Check your network connection!</string>
    <string name="empty_forecast_list">No Weather Information Available :(</string>

    <!-- Strings for today_weather_fragment -->
    <string name="today_weather_fragment_title">Today</string>
    <string name="today_weather_max">Max:</string>
    <string name="today_weather_min">Min:</string>
    <string name="today_weather_humidity">Humidity:</string>
    <string name="today_weather_wind_speed">Wind:</string>
    
    <!-- Special symbols -->
    <string name="celsius_sign">\u00B0</string>
    <string name="percent_symbol">%</string>
    <string name="meters_pes_second">\u0020m/s</string>

    <!-- Strings for weeks_forecast_fragment -->
    <string name="weeks_forecast_fragment_title">Week</string>
    <string name="week_weather_date_lbl">Date:</string>
    <string name="week_weather_max">Max:</string>
    <string name="week_weather_min">Min:</string>
    <string name="week_weather_humidity">Humidity:</string>
    <string name="week_weather_wind_speed">Wind:</string>

    <!-- Strings for fragment_about -->
    <string name="about_fragment_title">About</string>
    <string name="about_description_text">Съешь ещё этих мягких французских булок, да выпей же чаю.</string>
    <string name="about_developer_name">Developed by Constantine Chernenko.</string>
    <string name="about_snack_okay">Okay</string>


    <!--Location settings-->
    <string name="pref_location_label">Location</string>
    <string name="pref_location_key" translatable="false">location</string>
    <string name="pref_location_default" translatable="false">Kiev</string>

    <!--Settings for frequency of updates-->
    <!-- Label for the frequency of updates preference -->
    <string name="pref_frequency_of_updates_label">Update</string>
    <!--Label for every half/day updates preference-->
    <string name="pref_frequency_of_updates_label_half_day">Every 12 hours</string>
    <!--Label for every day updates preference-->
    <string name="pref_frequency_of_updates_label_day">Every day</string>
    <!--Label for every two days updates preference-->
    <string name="pref_frequency_of_updates_label_two">Every two days</string>

    <!--Value in SharedPreferences for every half/day updates option-->
    <string name="pref_frequency_of_updates_half_day">12</string>
    <!--Value in SharedPreferences for every day updates option-->
    <string name="pref_frequency_of_updates_day">24</string>
    <!--Value in SharedPreferences for every 48 updates option-->
    <string name="pref_frequency_of_updates_two_days">48</string>
    <!-- Key name for frequency of updates preference in SharedPreferences -->
    <string name="pref_frequency_of_updates_key" translatable="false">updates</string>
    <!--Default value preference in SharedPreferences-->
    <string name="pref_frequency_of_updates_day_default">24</string>

    <!-- Strings related to Notification Enabled preference -->
    <string name="pref_enable_notifications_key" translatable="false">enable_notifications</string>
    <string name="pref_enable_vibration_key" translatable="false">enable_vibration</string>
    <string name="pref_enable_led_key" translatable="false">enable_led</string>
    <string name="pref_enable_sound_key" translatable="false">enable_sound</string>

    <string name="pref_enable_notifications_label">Updates Notifications</string>
    <string name="pref_enable_notifications_true">Enabled</string>
    <string name="pref_enable_notifications_false">Not Enabled</string>
    <string name="pref_enable_notifications_default" translatable="false">true</string>

    <string name="pref_enable_vibration_label">Vibration</string>
    <string name="pref_enable_led_label">Led Indicator</string>
    <string name="pref_enable_sound_label">Sound</string>

    <string name="notification_message">There are new weather forecast for you!</string>

    <!-- Strings for SettingsFragment-->
    <string name="settings_fragment_title">Settings</string>
    <string name="pref_general_section">General</string>
    <string name="pref_notification_section">Notifications</string>

</resources>
