<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <PreferenceCategory
        android:title="@string/pref_general_section">

        <EditTextPreference
            android:title="@string/pref_location_label"
            android:key="@string/pref_location_key"
            android:defaultValue="@string/pref_location_default"
            android:inputType="text"
            android:singleLine="true"/>

        <ListPreference
            android:key="@string/pref_frequency_of_updates_key"
            android:title="@string/pref_frequency_of_updates_label"
            android:entries="@array/pref_frequency_of_updates_options"
            android:entryValues="@array/pref_frequency_of_updates_values"
            android:defaultValue="@string/pref_frequency_of_updates_day_default"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_notification_section">
        <SwitchPreference
            android:title="@string/pref_enable_notifications_label"
            android:key="@string/pref_enable_notifications_key"
            android:summaryOff="@string/pref_enable_notifications_false"
            android:summaryOn="@string/pref_enable_notifications_true"
            android:defaultValue="@string/pref_enable_notifications_default"/>
        <SwitchPreference
            android:title="@string/pref_enable_vibration_label"
            android:key="@string/pref_enable_vibration_key"
            android:summaryOff="@string/pref_enable_notifications_false"
            android:summaryOn="@string/pref_enable_notifications_true"
            android:defaultValue="@string/pref_enable_notifications_default"/>
        <SwitchPreference
            android:title="@string/pref_enable_led_label"
            android:key="@string/pref_enable_led_key"
            android:summaryOff="@string/pref_enable_notifications_false"
            android:summaryOn="@string/pref_enable_notifications_true"
            android:defaultValue="@string/pref_enable_notifications_default"/>
        <SwitchPreference
            android:title="@string/pref_enable_sound_label"
            android:key="@string/pref_enable_sound_key"
            android:summaryOff="@string/pref_enable_notifications_false"
            android:summaryOn="@string/pref_enable_notifications_true"
            android:defaultValue="@string/pref_enable_notifications_default"/>
    </PreferenceCategory>

</PreferenceScreen>