<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_todays_forecast"
            android:icon="@drawable/ic_today_24dp"
            android:title="@string/drawer_item_today"
            android:checked="true"/>
        <item
            android:id="@+id/nav_weeks_forecast"
            android:icon="@drawable/ic_filter_7_24dp"
            android:title="@string/drawer_item_week" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_insert_emoticon_24dp"
            android:title="@string/drawer_item_about" />
    </group>

    <group android:checkableBehavior="single">
    <item android:title="@string/drawer_category">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings_24dp"
                android:title="@string/drawer_item_settings" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_exit_to_app_24dp"
                android:title="@string/drawer_item_logout" />
        </menu>
    </item>
    </group>

</menu>
