<?xml version="1.0" encoding="utf-8"?>
<!-- Sorry, I'm not designer :( -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/item_container">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/week_date_stamp_lbl"
            android:gravity="start"
            android:padding="@dimen/week_date_padding"
            android:layout_weight="1"
            android:textSize="@dimen/week_date_text_size"
            android:text="@string/week_weather_date_lbl"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/week_date_stamp"
            android:gravity="end"
            android:padding="@dimen/week_date_padding"
            android:layout_weight="1"
            android:textSize="@dimen/week_date_text_size"/>
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/week_day_temp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/week_day_temp_margin_top"
        android:textStyle="bold"
        android:textSize="@dimen/week_day_temp_text_size"
        android:typeface="sans"/>
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/week_table_margin_top"
        android:layout_marginLeft="@dimen/week_table_margin_8"
        android:layout_marginRight="@dimen/week_table_margin_8"
        android:stretchColumns="0,1,2"
        android:gravity="center">
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/week_max_temp_lbl"
                android:layout_marginStart="@dimen/week_other_details_margin"
                android:textSize="@dimen/week_other_details_text_size"
                android:text="@string/week_weather_max"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/week_max_temp"
                android:textSize="@dimen/week_other_details_text_size"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/week_min_temp_lbl"
                android:layout_marginStart="@dimen/week_other_details_margin"
                android:textSize="@dimen/week_other_details_text_size"
                android:text="@string/week_weather_min"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/week_min_temp"
                android:textSize="@dimen/week_other_details_text_size"
                android:textStyle="bold"/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/week_humidity_lbl"
                android:layout_marginEnd="@dimen/week_other_details_margin"
                android:textSize="@dimen/week_other_details_text_size"
                android:text="@string/week_weather_humidity"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/week_humidity"
                android:textStyle="bold"
                android:textSize="@dimen/week_other_details_text_size"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/week_wind_speed_lbl"
                android:layout_marginEnd="@dimen/week_other_details_margin"
                android:textSize="@dimen/week_other_details_text_size"
                android:text="@string/week_weather_wind_speed"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/week_wind_speed"
                android:textSize="@dimen/week_other_details_text_size"
                android:textStyle="bold"/>
        </TableRow>
    </TableLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/week_description"
        android:layout_gravity="center_horizontal"
        android:layout_margin="@dimen/week_description_margin"
        android:textSize="@dimen/week_description_text_size"
        android:textStyle="bold"
        android:typeface="sans"/>
</LinearLayout>